Fix embedded tweet alignment

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -376,3 +376,7 @@ img {
 p.within-list {
     margin-top: 6px;
 }
+
+div.twitter-tweet {
+    margin: 0 auto;
+}
